fixed distro compile issue

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "xyo-sdk",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "XYO SDK to connect and consume AI Banking Transaction Enrichment",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rm -rf ./dist && tsc",
-    "prestart": "rm -rf ./dist && tsc",
+    "prepublish": "rm -rf ./dist && tsc",
     "start": "cd example; npm i; npm start;cd ..;",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
