--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "@types/node": "24.2.1",
     "prettier": "3.6.2",
     "typescript": "5.9.2"
+  },
+  "dependencies": {
+    "carbon-http": "^2.0.2"
   }
 }
