--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "Example app to test the SDK Library before publication and inside the Docker during CI/CD",
   "dependencies": {
-    "mydsdsad": "./../dist",
-    "xyo-sdk": "^0.1.4"
+    "xyo-sdk-local": "./../dist",
+    "xyo-sdk": "^0.1.6"
   }
 }
