--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rm -rf ./dist && tsc",
     "prepublish": "rm -rf ./dist && tsc",
     "start": "cd example; npm i; npm start;cd ..;",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test --import=tsx --experimental-test-coverage */**/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "typescript": "5.9.2"
   },
   "dependencies": {
-    "carbon-http": "^2.0.2"
+    "carbon-http": "^2.0.2",
+    "tsx": "^4.20.5"
   }
 }
