--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "rm -rf ./dist && tsc",
     "prepublish": "rm -rf ./dist && tsc",
     "start": "cd example; npm i; npm start;cd ..;",
+    "lint": "npx prettier -c */**/*.ts && eslint src/**/*",
     "test": "node --test --import=tsx --experimental-test-coverage */**/*.test.ts"
   },
   "repository": {
@@ -30,12 +31,17 @@
   },
   "homepage": "https://github.com/syniol/xyo-sdk-node#readme",
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
     "@types/node": "24.2.1",
+    "eslint": "^9.34.0",
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
     "prettier": "3.6.2",
-    "typescript": "5.9.2"
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0"
   },
   "dependencies": {
-    "carbon-http": "^2.0.2",
-    "tsx": "^4.20.5"
+    "carbon-http": "^2.0.2"
   }
 }
