npm i missed from example package test

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -7,4 +7,4 @@ RUN npm i && npm run lint && npm test
 
 # Runs example package to test the import and instantiation of release package
 WORKDIR /example
-RUN npm start
+RUN npm i && npm start
